<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/drawer_back"
    tools:context="com.example.n9705.samplereader.SuggestActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:id="@+id/frameLayout">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar1"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#1d1f20"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        </android.support.v7.widget.Toolbar>
            <TextView
                android:id="@+id/SuggestBarTextview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/suggest"
                android:textSize="20sp"
                android:textColor="#d8dbde"/>

        <ProgressBar
            android:id="@+id/progressBar2"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:indeterminate="false" />
    </FrameLayout>

    <com.kingja.supershapeview.SuperShapeEditText
        android:id="@+id/SuggestText"
        android:layout_width="330sp"
        android:layout_height="150sp"
        android:layout_below="@+id/frameLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:gravity="top"
        android:hint="@string/Suggest_text"
        android:textColorHint="#d8dbde"
        android:padding="12dp"
        android:textColor="#d8dbde"
        app:super_cornerRadius="10dp"
        app:super_strokeColor="@color/drawer_font"
        app:super_strokeWidth="2dp" />

    <com.kingja.supershapeview.SuperShapeTextView
        android:id="@+id/Send"
        android:layout_width="330sp"
        android:layout_height="50sp"
        android:layout_alignStart="@+id/SuggestText"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/sure1"
        android:textSize="19sp"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        app:super_cornerRadius="56dp"
        app:super_solidColor="#1d1f20" />
</RelativeLayout>
